# exam-skill

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  SKILL.md  install.bat  install_cn.bat  main.py  pyproject.toml  reset.bat  run_api.bat  run_cli.bat
app/: __init__.py  cli.py  config.py
app/chains/: __init__.py  review_chain.py
app/prompts/: __init__.py  review_prompt.py
app/schemas/: __init__.py  review.py
app/services/: __init__.py  chapter_brief.py  document_loader.py  document_quality.py  exam_structurer.py  file_hash.py  index_manifest.py  markdown_formula.py  markdown_writer.py  material_analyzer.py  ocr_manager.py  review_auditor.py  review_service.py  review_strategy.py  semantic_splitter.py  splitter.py  vectorstore.py
frontend/: app.js  index.html  styles.css
